[global]
verbose = 0

[metadata]
license_file = LICENSE.rst

[nosetests]
#
# Nose requires comma separation, but allows whitespace around commas.
# Newlines at the beginning are not tolerated.
#
tests = kt.testing.tests.cleanup,
        kt.testing.tests.composite,
        kt.testing.tests.requests

detailed-errors = 1
nocapture = 1
verbosity = 1

[pytest]
addopts =
    --quiet
    --pyargs
    kt.testing.tests.cleanup
    kt.testing.tests.composite
    kt.testing.tests.requests
