[global]
verbose = 0

[metadata]
name = kt.testing
version = 3.2.0
author = Fred L. Drake, Jr.
author_email = fred@fdrake.net
description = Test support code featuring flexible harness composition
license_files = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/keepertech/kt.testing/

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing

project_urls =
    Documentation = https://kttesting.readthedocs.io/en/latest/
    Tracker = https://github.com/keepertech/kt.testing/issues/

[options]
namespace_packages = kt
packages =
    kt.testing
    kt.testing.tests
package_dir =
    = src
install_requires =
    mock; python_version == "2.7"
    requests
    six

[options.extras_require]
test =
